--- a/_posts/2023-04-28-72.md
+++ b/_posts/2023-04-28-72.md
@@ -13,6 +13,8 @@ Jak skutecznie budować organizacje?  Czy wskaźniki HRowe przekładają się na
 
 Linki i ciekawe znaleziska:
 
+- [Szkolenie Kubernetes the Hard Way - 14.06.2022](https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023)
+- [Szkolenie Azure Kubernetes Service AKS Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
 - [Uber’s engineering level changes - The Pragmatic Engineer](https://blog.pragmaticengineer.com/uber-engineering-levels/)
 - [dbdev: PostgreSQL Package Manager](https://supabase.com/blog/dbdev)
 - [Inside Look: Measuring Developer Productivity and Happiness at LinkedIn  ](https://engineering.linkedin.com/blog/2023/inside-look--measuring-developer-productivity-and-happiness-at-l)
