--- a/_posts/2023-04-21-71.md
+++ b/_posts/2023-04-21-71.md
@@ -13,6 +13,8 @@ Tym razem o Postgresie, rynku IT, a także kilka ciekawostek!
 
 Linki i ciekawe znaleziska:
 
+- [Szkolenie Azure Kubernetes Service AKS Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
+- [Szkolenie Kubernetes the Hard Way - 14.06.2022](https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023)
 - [The Wonders of Postgres Logical Decoding Messages](https://www.infoq.com/articles/wonders-of-postgres-logical-decoding-messages/)
 - [What is a Scream Test - Virtual Wiki](https://www.v-wiki.net/scream-test-meaning/)
 - [Is there a drop in software engineer job openings, globally? - The Pragmatic Engineer](https://blog.pragmaticengineer.com/is-there-a-drop-in-software-engineer-job-openings-globally/)
