--- a/_posts/2023-04-14-70.md
+++ b/_posts/2023-04-14-70.md
@@ -13,6 +13,8 @@ Tym razem o aktualności fallacies of distributed computing, czyli systemy rozp
 
 Linki i ciekawe znaleziska:
 
+- [Szkolenie Azure Kubernetes Service AKS Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
+- [Szkolenie Kubernetes the Hard Way - 14.06.2022](https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023)
 - [Fallacies of distributed computing - Wikipedia](https://en.wikipedia.org/wiki/Fallacies_of_distributed_computing)
 - [Dołącz do Poznaj Terraform w przedsprzedaży](https://architekturaikontenery.pl/poznajterraform/?utm_source=patoarchitekci&utm_medium=ep70&utm_campaign=ptf_pre)
 
