--- a/_posts/2023-04-07-69.md
+++ b/_posts/2023-04-07-69.md
@@ -6,12 +6,15 @@ description:
 episode: "69"
 tags: []
 spreaker: 53460484
+apple: wprowadzenie-do-event-sourcing-z-oskarem-dudyczem/id1477067604?i=1000607816170
 ---
 Tym razem nasz gość specjalny, Oskar Dudycz, przybliży nam temat event sourcingu!
 
 
 Linki i ciekawe znaleziska:
 
+- [Szkolenie Azure Kubernetes Service AKS Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
+- [Szkolenie Kubernetes the Hard Way - 14.06.2022](https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023)
 - [Dołącz do Poznaj Terraform w przedsprzedaży](https://architekturaikontenery.pl/poznajterraform/?utm_source=patoarchitekci&utm_medium=ep69&utm_campaign=ptf_pre)
 - [Beginner's Guide to Event Sourcing  ](https://www.eventstore.com/event-sourcing)
 - [Event-driven startup - Alexey Zimarev](https://zimarev.com/blog/event-sourcing/startup-story-1/)
@@ -23,7 +26,6 @@ Linki i ciekawe znaleziska:
 - [Blog Oskara](https://event-driven.io/en/)
 - [Newsletter Oskara - Architecture Weekly](https://www.architecture-weekly.com/)
 - [Event Store Blog](https://www.eventstore.com/blog)
-- [Beginner's Guide to Event Sourcing  ](https://www.eventstore.com/event-sourcing)
 - [Never Lose Data Again - Event Sourcing to the Rescue!](https://event-driven.io/en/never_lose_data_with_event_sourcing/)
 - [When not to use Event Sourcing?](https://event-driven.io/en/when_not_to_use_event_sourcing/)
 - [Event Streaming is not Event Sourcing!](https://event-driven.io/en/event_streaming_is_not_event_sourcing)
