--- a/_posts/2023-05-05-73.md
+++ b/_posts/2023-05-05-73.md
@@ -6,7 +6,7 @@ description:
 episode: "73"
 tags: []
 spreaker: 53737539
-apple: 
+apple: technology-radar-vol-28-review/id1477067604?i=1000611834787
 ---
 Tym razem Patoarchitekci podsumowują Technology Radar od ThoughtWorks!
 
