--- a/_posts/2023-05-05-73.md
+++ b/_posts/2023-05-05-73.md
@@ -7,6 +7,8 @@ episode: "73"
 tags: []
 spreaker: 53737539
 apple: technology-radar-vol-28-review/id1477067604?i=1000611834787
+newsletter:  |
+  
 ---
 Robimy przegląd najnowszego Technology Radar od ThoughtWorks! Ile w nim wartościowych informacji? M. in. coś o nowych technologiach, cloudzie, Kubernetesie i nie tylko!
 
