--- a/_posts/2023-05-05-73.md
+++ b/_posts/2023-05-05-73.md
@@ -7,6 +7,12 @@ episode: "73"
 tags: []
 spreaker: 53737539
 apple: technology-radar-vol-28-review/id1477067604?i=1000611834787
+newsletter:  |
+  test mulitline?
+  co z tego wynikinie?
+  dupa?
+  [test linka](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
+  
 ---
 Robimy przegląd najnowszego Technology Radar od ThoughtWorks! Ile w nim wartościowych informacji? M. in. coś o nowych technologiach, cloudzie, Kubernetesie i nie tylko!
 
