--- a/_posts/2023-05-05-73.md
+++ b/_posts/2023-05-05-73.md
@@ -10,7 +10,7 @@ apple: technology-radar-vol-28-review/id1477067604?i=1000611834787
 newsletter:  |
   Robimy przegląd najnowszego Technology Radar od ThoughtWorks! Ile w nim wartościowych informacji? M. in. coś o nowych technologiach, cloudzie, Kubernetesie i nie tylko!
   
-  Sprawdź czerwcowe pato-szkolenia👇
+  ## Sprawdź czerwcowe pato-szkolenia👇
   
   - [Szkolenie Azure Kubernetes Service AKS Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
   - [Szkolenie Kubernetes the Hard Way - 14.06.2022](https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023)
