--- a/_posts/2023-05-12-74.md
+++ b/_posts/2023-05-12-74.md
@@ -20,170 +20,141 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+Patoarchitekci Short! Dziś m. in:
+Co ma wspólnego hacking, Uber i legislacja Wielkiej Brytanii? 
+Czy rzeczywiście Amazon nie radzi sobie z mikroserwisami, z serverlessem, 
+oraz: nowe regulacje odnośnie opensource'u przepchnięte przez Senat USA.
+
+Przegląd nowości ze świata IT - okiem Patoarchitektów! 
 
 
 Linki i ciekawe znaleziska:
 
-- [Azure Kubernetes Service nullAKS) Masterclass](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
+- [Azure Kubernetes Service (AKS) Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
 - [Szkolenie Kubernetes the Hard Way - 14.06.2022](https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023)
 - [Scaling up the Prime Video audio/video monitoring service and reducing costs by 90% - Prime Video Tech](https://www.primevideotech.com/video-streaming/scaling-up-the-prime-video-audio-video-monitoring-service-and-reducing-costs-by-90)
 - [Monoliths are not dinosaurs  ](https://www.allthingsdistributed.com/2023/05/monoliths-are-not-dinosaurs.html)
-- [Even Amazon can&#39;t make sense of serverless or microservices](https://world.hey.com/dhh/even-amazon-can-t-make-sense-of-serverless-or-microservices-59625580)
+- [Even Amazon can't make sense of serverless or microservices](https://world.hey.com/dhh/even-amazon-can-t-make-sense-of-serverless-or-microservices-59625580)
 - [How to recover from microservices](https://world.hey.com/dhh/how-to-recover-from-microservices-ce3803cc)
 - [GKE Autopilot is now default mode of cluster operation  ](https://cloud.google.com/blog/products/containers-kubernetes/gke-autopilot-is-now-default-mode-of-cluster-operation/)
 - [Ex-Uber security chief sentenced over covering up hack](https://www.bbc.com/news/technology-65497186)
-- [Just a moment...](https://www.itbrew.com/stories/2023/04/28/senate-takes-action-on-open-source-vulnerabilities-in-wake-of-2022-log4j-attack)
-- [Just a moment...](https://www.itbrew.com/stories/2023/04/28/senate-takes-action-on-open-source-vulnerabilities-in-wake-of-2022-log4j-attack)
+- [Senate takes action on open-source vulnerabilities in wake of 2022 Log4j attack](https://www.itbrew.com/stories/2023/04/28/senate-takes-action-on-open-source-vulnerabilities-in-wake-of-2022-log4j-attack)
 
 ### Transkrypcja
 
-Osoba mówiąca 1
-Cześć. Słuchacie patriotów? Prowadzą Szymon, Warda i Łukaszka.
+**Szymon Warda**: Cześć. Słuchacie Patoarchitektów! Prowadzą Szymon Warda 
 
-Osoba mówiąca 2
-Wszystkie linki do tego odcinka znajdziecie na Patoarchitektów 74 albo gdzieś na dole w opisie na playerze, który słuchacie.
+**Łukasz Kałużny**: i Łukasz Kałużny. Wszystkie linki do tego odcinka znajdziecie na patoarchitekci/io/74 albo gdzieś na dole w opisie na playerze, którym słuchacie.
 
-Osoba mówiąca 1
-To zaczynam. Krótka wiadomość, z niedawna krótka i treściwa, ale też wydaje mi się, że też zmieni się zmienić postrzeganie ról w organizacjach. Został skazany Ex Security Chief Ubera za przykrywanie haku. Wyrok nie jest duży, bo to jest 3 lata w zawiasach, ale jednak jest to wyrok skazujący za odpowiedzialność, którą pełni w organizacji. I wydaje mi się, że to będzie na naszą skalę codzienne działanie. To nie będzie duże. Nie widzimy tu dużego wpływu, ale jednak zmieni podejście i zarządzanie ryzykiem i do tego jak będziemy podchodzili do bezpieczeństwa w organizacjach dodanych.
+**Szymon Warda**: To zaczynamy. Świeżutka wiadomość, z niedawna, krótka i treściwa, ale też wydaje mi się, że też zmieni się... Zmieni postrzeganie ról w organizacjach. Został skazany Ex Security Chief Ubera za przykrywanie hacku. Wyrok nie jest duży, bo to jest 3 lata w zawiasach, ale jednak jest to wyrok skazujący za odpowiedzialność, którą pełni w organizacji. I wydaje mi się, że to będzie na naszą skalę tak codzienną, działanie to nie będzie takie duże. Nie będzie to miało dużego wpływu, ale jednak zmieni podejście i zarządzanie ryzykiem i do tego jak będziemy podchodzili do bezpieczeństwa w organizacjach do danych tak naprawdę.
 
-Osoba mówiąca 2
-Tak naprawdę wiesz co może być. Zobacz, że to jest troszeczkę za ukrywanie i to jest ciekawe, bo powiedzieć odpowiedzialność, być tak pewnie nic by się nie stało, albo kwota tej kary poszła bez jego oceny.
+**Łukasz Kałużny**: Wiesz co, może być, tylko... Zobacz, że to jest troszeczkę za ukrywanie i to jest ciekawe, bo jak powiedzieć odpowiedzialność, powiem Ci tak - pewnie nic by się mu nie stało, albo kwota tej kary poszłaby z jego OC.
 
-Osoba mówiąca 1
-Zgadzam się w zupełności, że to jest za ukrywanie, ale wydaje mi się, że w tym momencie, bo to, że się zdarzają, to będą się zdarzały, tego nie zmienimy. Bardziej będzie większe robienie w gacie. W kontekście tego nie przykrywamy haków i wydaje mi się, że przez Nowy rok nawet będziemy więcej sytuacji widzieli. Więcej firm będzie ku temu, że okay, publikujemy, po prostu nie będę brał odpowiedzialności, tego, że ukryjemy, to może to wypłynąć. Więcej wiadomości w dziale o tym.
+**Szymon Warda**: Zgadzam się w zupełności, że to jest za ukrywanie, ale wydaje mi się, że w tym momencie, bo to, że hacki się zdarzają, to będą się zdarzały, tego nie zmienimy. Bardziej będzie większe robienie w gacie. W kontekście tego nie przykrywamy hacków i wydaje mi się, że przez ten wyrok nawet będziemy więcej takich sytuacji widzieli. Więcej firm będzie jednak ku temu, że okay, publikujemy, po prostu nie będę brał na sieebie odpowiedzialności, tego, że ukryjemy, to, bo może to wypłynąć. Więc będziemy widzieli więcej wiadomości o tym.
 
-Osoba mówiąca 2
-Powiedziałbym też OK, jeżeli chodzi o ochronę danych. Jest super i takie bardzo mocne do przodu. Więc to jest pytanie czy to jest wyznacznik, bo zobacz, że w reszcie Europy w ogóle. No właśnie, po tylu latach to jest pierwszy taki duży kazus.
+**Łukasz Kałużny**: Tak, powiedziałbym też UK, jeżeli chodzi o ochronę danych... Jest super i takie bardzo mocno do przodu. Więc to jest pytanie - czy to jest wyznacznik, bo zobacz, że w reszcie Europy w ogóle. No właśnie, po tylu latach to jest pierwszy taki duży kazus.
 
-Osoba mówiąca 1
-Zupełnie tak, tylko to gdzieś się musi zacząć pamiętać, że zaczynają się gdzieś, propagują się powoli. No więc.
+**Szymon Warda**: W zupełności tak, tylko to gdzieś się musi zacząć. Pamiętaj, że te rzeczy zaczynają się gdzieś, potem propagują się powoli.
 
-Osoba mówiąca 2
-Zobaczymy. Jestem ciekaw, czy po prostu ocenie będzie podwyższone.
+**Łukasz Kałużny**: No więc zobaczymy. Jestem ciekaw, czy po prostu OC nie będzie podwyższane.
 
-Osoba mówiąca 1
-Tym bardziej, że jest ciśnienie na to, żeby przyjrzeć się w znaczący sposób tym dużym organizacjom technicznym, No nie, w końcu się podatku w kontekście legislacji innych rzeczy.
+**Szymon Warda**: Możliwe! Tym bardziej, że jest ciśnienie na to, żeby przyjrzeć się w znaczący sposób tym dużym organizacjom technicznym. No nie, w kontekście podatków... W kontekście właśnie legislacji i innych rzeczy.
 
-Osoba mówiąca 2
-Tak, Uber się reklamował mimo przepalenia środków.
+**Łukasz Kałużny**: Tak, Uber się reklamował mimo że to tylko przepieralnia środków.
 
-Osoba mówiąca 1
-Stron, co się dalej z drugim tematem się bardzo mocno wiąże. Senat amerykański znowu musi zacząć miał przesłuchania odnośnie pamiętamy. W zeszłym roku trochę było odnośnie tego prywatności blog for Jeju i co się stało? 29 marca przepisali Security Open Source Software Act. Co to robi? Generalnie robi to, że po pierwsze stwierdza ważność open source, więc idzie to w kierunku, że zabraniamy. Nie pytamy, że on jest, jest ważny i będzie używany potwierdza krytyczną. Zaznacza potrzebę interwencji na poziomie federalnym, czyli na poziomie całego państwa Stanów Zjednoczonych. No nie? Bezpieczeństwo w open source. Więc to jest ciekawe.
+**Szymon Warda**: Wtrącę się dalej z drugim tematem, bo on się bardzo mocno wiąże. Senat amerykański - znowu gdzieś to musi się zacząć - miał przesłuchanie odnośnie pamiętamy... W zeszłym roku to chyba było, odnośnie tego podatności w Log4Ju i co się stało? 29 marca przepchnęli Security Open Source Software Act. Co to robi generalnie? Robi to, że po pierwsze stwierdza ważność open source'u, więc nie idzie to w kierunku, że zabraniamy. Nie. Stwierdzamy, że on jest, jest ważny i będzie używany. Potwierdza krytyczność. Zaznacza potrzebę interwencji na poziomie federalnym, czyli na poziomie całego państwa Stanów Zjednoczonych. No nie? Bezpieczeństwo w open sourcie. Więc to jest ciekawe.
 
-Osoba mówiąca 2
-Czyli de facto sponsoring kontra aktorów i firm.
+**Łukasz Kałużny**: Czyli de facto sponsoring kontraktorów i firm.
 
-Osoba mówiąca 1
-Nie, właśnie nie, bo teraz idziemy dalej. To, co zrobili, nadaje rolę dyrektor Security Security agencji CISA, żeby prowadzić do outrage. Nie ułatwia tłumaczenie tego na polski. Czy takie inicjatywy generalnie będą sięgały dużych pakietów i pomagało jakoś, więc to nie będzie do końca szło w kierunku właśnie konstruktorów. Wydaje mi się.
+**Szymon Warda**: Nie, właśnie nie, bo teraz idziemy dalej. To, co zrobili. Nadaje rolę Directors of Security and Infrastructure Security Agency CISA, żeby prowadzić outreach. Nie wiem, jakie jest ładne tłumaczenie tego na polski. Czyli takie inicjatywy generalnie, które będą sięgały do różnych projektów i pomagało jakoś, więc to nie będzie do końca szło w kierunku właśnie kontraktorów. Wydaje mi się.
 
-Osoba mówiąca 2
-To jest trochę co patrząc się na ekosystem to jest pytanie dlaczego ja tak wrzuciłem, bo ktoś na koniec dnia, jeżeli będą podatności no cóż, jeżeli tak podchodzą to gdzieś na koniec dnia znowu będą chcieli to łatać cokolwiek czy. No nie oszukujmy się, agencje zamawiają kogoś do audytu, dlatego mówię, że kontraktowe firmy mogą na tym zyskać, które kręcą się wokół open source.
+**Łukasz Kałużny**: To jest troszeczkę, wiesz co. Patrząc się na ten ekosystem to jest pytanie wiesz, bo dlaczego ja tak rzuciłem, bo ktoś na koniec dnia, jeżeli będą podatności i inne rzeczy, jeżeli tak podchodzą... To gdzieś na koniec dnia znowu będą chcieli to łatać cokolwiek czy... No nie oszukujmy się, agencje zamawiają kogoś do audytów, dlatego mówię, że kontraktorzy, firmy mogą na tym zyskać, które kręcą się wokół open source'u.
 
-Osoba mówiąca 1
-Mają, ale mi się wydaje. Ostatni element, który stwierdzają, to jest potrzebę stworzenia frameworka określającego bezpieczeństwo poszczególnych projektów opensource'owego. I mi się wydaje, to jest już moje strzelanie, że to pójdzie bardziej w kierunku tak jak czy pójdzie do knajpy Jorku, to każda knajpa ma w oknie przekroju tabliczka od A do S czystości i to bardziej pójdzie w tym kierunku, że będziemy mieli projekty, będą miały po prostu certyfikację na poziomie bezpieczeństwa de facto.
+**Szymon Warda**: Zyskają, ale mi się wydaje. Znaczy, bo ostatni element, który stwierdzają, to jest potrzeba stworzenia frameworka określającego bezpieczeństwo poszczególnych projektów opensource'owych. I mi się wydaje, to jest już takie moje strzelanie, że to pójdzie bardziej w kierunku tak jak załóżmy, jak się pójdzie do knajpy w Nowym Jorku, to każda knajpa ma w oknie przyklejoną tabliczkę od A do F na poziomie czystości i to bardziej pójdzie w tym kierunku, że będziemy mieli projekty, będą miały po prostu certyfikację na poziomie bezpieczeństwa de facto.
 
-Osoba mówiąca 2
-No wiesz, jestem ciekaw, bo ja z ich gabinetów też korzystam często jako wytycznych, bo są dobre, więc tam może być. Cieszy mnie, że to Cisa tam będzie robić tak cała.
+**Łukasz Kałużny**: No wiesz, no jestem ciekaw, bo CISA... Ja z ich guide'ów też korzystam często jako wytycznych, bo są dobre, więc to może być... Po prostu cieszy mnie, że to Cisa tam będzie robić.
 
-Osoba mówiąca 1
-Kierunek, w którym to idzie jest bardzo ułożony, mimo że to robią Senat to jest powiedzmy ludzie stare po 70 parę lat generalnie, ale nie było to robione w kierunku paniki i raczej kierunku. Z mojego punktu widzenia tak naprawdę nie zrobiliśmy kroku do przodu, tylko bardziej układamy jak.
+**Szymon Warda**: Czyli tak, cały kierunek, w którym to idzie jest bardzo ułożony, mimo że to robią... Senat to jest powiedzmy, ludzie starsi  tak po 70 parę lat generalnie, ale nie było to robione w kierunku paniki i raczej to idzie w dobrym kierunku. Z mojego punktu widzenia tak naprawdę nie zrobiliśmy kroku do przodu, tylko bardziej układamy jak to będzie wyglądało.
 
-Osoba mówiąca 2
-To raczej patrzymy tak jak dalej zrobić.
+**Łukasz Kałużny**: To raczej patrzymy tak - jak dalej zrobić krok.
 
-Osoba mówiąca 1
-Krok. Tak dokładnie, więc mnie to cieszy. De facto naprawdę dobrze. Co tam u Ciebie Łukaszu?
+**Szymon Warda**: Tak dokładnie, więc mnie to cieszy. De facto. Naprawdę. Dobrze. Co tam u Ciebie, Łukaszu?
 
-Osoba mówiąca 2
-To ja zacznę od ding dong przerwy reklamowej. Jeżeli ktoś z Was jest zainteresowany, są to szkolenia 13 czerwca, jednodniowe Master Class AXA, mocne Deep dive w bebechy. Za to 14 czerwca jak to ktoś określił szkolenie w którym jest więcej mięsa niż w bigosie jego teściowej, czyli Kubernetes hardware. Cały dzień nauki bebechów Kubernetes, za to czystego poprzez stawianie. Teraz tłumaczenie całym ćwiczeniami, żeby postawić sobie z Binary samodzielnie Kubernetes i zobaczyć w ogóle skąd te pewne zawiłości się biorą i niezrozumienia. A jeżeli de facto szukacie jakichś szkoleń dedykowanych do Was do firmy, to z Szymonem takowe prowadzimy, więc dajcie znać. Bardzo chętnie się z Wami spotkamy.
+**Łukasz Kałużny**: To ja zacznę od ding dong przerwy reklamowej. Jeżeli ktoś z Was jest zainteresowany, są 2 patoszkolenia - 13 czerwca, jednodniowy Master Class z AKSa, mocny Deep Dive w bebechy. Za to 14 czerwca jak to ktoś określił szkolenie, w którym jest więcej mięsa niż w bigosie jego teściowej, czyli Kubernetes The Hard Way. Cały dzień nauki bebechów Kubernetesa za to, czystego poprzez stawianie klastra z tłumaczeniem, całymi ćwiczeniami, żeby postawić sobie z binarek samodzielnie Kubernetesa i zobaczyć w ogóle... Skąd te pewne zawiłości się biorą i niezrozumienia. A jeżeli de facto szukacie jakichś szkoleń dedykowanych do Was do firmy, to z Szymonem takowe prowadzimy, więc dajcie znać. Bardzo chętnie się z Wami spotkamy.
 
-Osoba mówiąca 1
-Aż będę miał link, który podważy to wszystko niechęć spotkania.
+**Szymon Warda**: Aż będę miał link, który podważy to wszystko... Znaczy nie chęć spotkania... Ale!
 
-Osoba mówiąca 2
-Ale dokładnie. Dobra, lecimy. Teraz przejdźmy do niusów. Dla mnie jedyną rzeczą, którą mam na dzisiaj to jest shit drama wokół Prime Video i postu na temat kawałka ich infrastruktury. Nie wchodząc już w ogóle co on robi, bo to zupełnie nie ma w tym miejscu sensu, a tylko jak bardzo ludzie nie rozumieją i próbują przypisywać teorie do jakiegoś pojedynczego przypadku architektonicznego.
+**Łukasz Kałużny**: Dokładnie. Dobra, lećmy a teraz przejdźmy sobie do niusów. Dla mnie - jedyną rzeczą, którą mam na dzisiaj to jest shit drama wokół Prime Video i ich postu na temat kawałka ich infrastruktury. W ogóle... nie wchodząc już w ogóle co on robi, bo to zupełnie nie ma w tym miejscu sensu, tylko jak bardzo ludzie nie rozumieją i próbują przypisywać teorie do jakiegoś pojedynczego przypadku architektonicznego.
 
-Osoba mówiąca 1
-Szukamy hot niusów nie tylko w polityce itd. Technologii też.
+**Szymon Warda**: Szukamy hot niusów nie tylko w polityce itd. W technologii też generalnie.
 
-Osoba mówiąca 2
-Generalnie. Dokładnie. I teraz jeżeli popatrzymy na całość tutaj układanki, no to w tym video, czyli tej usłudze Amazona oni robią piękny ping, czyli używają swoich usług do budowy kolejnych. I w tym wypadku użyli serverlessów. Użyli lambdy do lambdy i tych kawałków serverlessów do budowy analizy swojego kontentu, który tam mają. I wyszło na to, że jak przyszła skala to się zwaliła. Więc co zrobili? Przerobili kod base tak, żeby poleciał na akcje dwójki, co zresztą sami powiedzieli, że scali to do monolityczne aplikacji, ale kod pozostał ten sam, bo był poprawnie napisany. No i pozwoliło im to zejść z kosztami o 90%. I to jest naprawdę super takie zejście. Ale co się potem wydarzyło, to wiele osób podchwyciły jakie to mikroserwisach są złe. Monolit, chmura jest zła.
+**Łukasz Kałużny**: Dokładnie. I teraz jeżeli popatrzymy na całość tutaj układanki, no to w Prime Video, czyli tej usłudze Amazona oni robią piękny dogfooding, dogfooding czyli używają swoich usług do budowy kolejnych. I w tym wypadku użyli serverlessa. Użyli lambdy do... Lambdy i tych kawałków serverlessowych do budowy analizy swojego kontentu, który tam mają. I wyszło na to, że jak przyszła scala to się zwaliło. Więc co zrobili? Przerobili codebase tak, żeby poleciał na EC2ki, co zresztą sami powiedzieli, że scalili to do monolitycznych aplikacji, ale kod pozostał ten sam, bo był poprawnie napisany. No i pozwoliło im to zejść z kosztami o 90%. I to jest naprawdę super takie zejście. Ale co się potem wydarzyło, to wiele osób podchwyciło to jakie to mikroserwisy są złe. Monolity for the win, chmura jest zła.
 
-Osoba mówiąca 1
-I serverlessów.
+**Szymon Warda**: I serverless jest zły, tak.
 
-Osoba mówiąca 2
-Haha. Zaczął od tego oczywiście gównoburzę postami w social mediach i na swoim blogu, które Wam wrzuciliśmy. I pierwsza taka rzecz, którą rzucił event Amazon Trend Max Sens Serverlessów Micro Services. No kurwa.
+**Łukasz Kałużny**: Tak, tak, DHH zaczął od tego oczywiście gównoburzę postami w social mediach i na swoim blogu, które Wam wrzuciliśmy. I pierwsza taka rzecz, którą rzucił event - Amazon Can't Make Sense of Serverless or Big Micro Services. No kurwa!
 
-Osoba mówiąca 1
-Zobaczyłem, że poważne. To jest tak samo jak odnośnie rozkręcania firmy. Jak ktoś powiedział, że prezentując firmę trzeba patrzeć na wytyczne Googla. Przerwy trzeba patrzeć, ale pamiętajmy, że wytyczne gugla są dla milionów użytkowników albo setki użytkowników. Jeżeli rozkręcamy system, który ma mieć na starcie 10 000 tysięcy użytkowników to nie mają sensu. Tak samo nie byłby w tym miejscu, gdyby wcześniej nie skorzystali. Serverlessów po prostu, bo serwer dał im pewne możliwości odłożenia pewnych kosztów ludzkich na poziom managementu tych demek. I to był fajny problem bo zarabiają. Serwis jest wykorzystywany więc fajnie. Teraz zarabiając kasę, mając system działający możemy zmieniać. To jest fajny problem.
+**Szymon Warda**: Znaczy, żeby było ważne. To jest tak samo jak odnośnie rozkręcania firmy. Jak ktoś powiedział, że rozkręcając firmę trzeba powiedzmy budując system, trzeba patrzeć na wytyczne Googla. Powiedzmy - trzeba patrzeć, ale pamiętajmy, że wytyczne Google'a są dla milionów użytkowników albo setek milionów użytkowników. Jeżeli rozkręcamy system, który ma mieć na starcie 10, setka tysięcy, tysiące użytkowników to wytyczne nie mają sensu. Tak samo Prime nie byłby w tym miejscu, gdyby wcześniej nie skorzystali z serverlessa po prostu, bo serverless dał im pewne możliwości odłożenia pewnych kosztów ludzkich na poziom managementu tych VMek. I po prostu skalowali się - teraz mają fajny problem bo zarabiają. Serwis jest wykorzystywany więc fajnie. Teraz zarabiając kasę, mając system działający możemy zmieniać. To jest fajny problem.
 
-Osoba mówiąca 2
-Idąc dalej to co powiedziałeś jest bardzo fajna rzecz bo CEO Amazona się wypowiedział, odpalił wpis i odpowiedział. I jedno z takich mocnych zdań, które sam podkreślił If you have the best in to make the best design. I oni zrobili, dowodzili wartość, a nie tam się skupiali na rachunku i technikalia, tylko skopiowali usługę.
+**Łukasz Kałużny**: Tak, idąc sobie wiesz, dalej to co powiedziałeś jest bardzo fajna rzecz bo CTO Amazona się wypowiedział, odpalił wpis i odpowiedział. I jeden z takich mocnych zdań, które sam podkreślił - If you hire the best engineers, you should trust them to make the best decision. I oni zrobili, dowozili wartość, a nie tam się skupiali na rachunku i technikaliach, tylko zbootstrapowali usługę.
 
-Osoba mówiąca 1
-Co jest ważniejsze tej sytuacji? Wybrali mega elastyczny system, czyli serverlessów, w którym mogą łatwo zrobić coś, skalować dalej. Przez ten czas poznali swoją domenę, dopiero domenę znali de facto, czyli mieli tą bazę kiedy działa i rozumieli jak to działa i w którym kierunku przeszli na bardziej sztywną czyli na widełki. I to ma sens, bo już znali domenę, a w momencie eksploracji nie poszli full Kubernetes albo full wielki, bo to nie miałoby sensu, bo zmiany byłyby zbyt kosztowne to będzie. No ludzie tej wartości nie widzą tak naprawdę.
+**Szymon Warda**: Co jest ważniejsze tej sytuacji? Wybrali mega elastyczny system, czyli serverlessa, w którym dużo mogą łatwo zrobić, łatwo się skalować i tak dalej. Przez ten czas poznali swoją domenę, dopiero jak domenę znali de facto, czyli mieli tą bazę gdzie to działa i rozumieli jak to działa i w którym kierunku, przeszli na bardziej sztywną czyli VMki. I to ma sens, bo już znali domenę, a w momencie eksploracji nie poszli załóżmy full Kubernetes albo full VMki, bo to nie miałoby dla nich sensu, bo zmiany byłyby zbyt kosztowne w tym momencie.
 
-Osoba mówiąca 2
-Więc to jest w ogóle, wiesz? Dlatego patrząc się całość i taka rzecz z całości. Więc uważam, że tutaj decha znowu ma kolumny, żeby się popisać i porobić dramy. I właśnie bardzo fajnie jest powiedziane od tego, co to ma zmiana, z czym się zgadzam. Po prostu to nie jest religia, Nie ma jedynej słusznej rzeczy, która słusznych wzorców marketingowych, które zawsze wszędzie będą działały. I problem z mikroserwisach i pojmowaniem tamtego jak patrzę tych komentarzy jest taki, że wszyscy zapominają, że architektura ewoluuje. Mamy już teraz pojęcie architektury ewolucyjnej. A druga rzecz, że wszystkie techniki modeling owe powinniśmy zacząć od modelowania co chcemy zrobić? Bo czasami z modelowania jak nic wyjdzie nam monolit, a czasami z powodu sieczki organizacyjnej wyjdą nam mikro serwisy, które rozwiązują nie problemy technologiczno organizacyjne.
+**Łukasz Kałużny**: No.
 
-Osoba mówiąca 1
-Często więcej niż jednej rzeczy nie dałeś. To się może zmienić w trakcie życia de facto organizacji systemu, potrzeb, kierunku. W tym to pracujemy na. Mógł być monolit, że ma sens, ale potem możemy stwierdzić generalnie, że jednak rozbijamy to i to, co jest też super ważne. Nie powinniśmy chodzić w kierunku takich skrajności, a full monolit, a full mikroserwisach to są wartości, które z których budujemy system. Część systemu może być monolityczne, część może być na mikroserwisach, część może być, część może być czymś zupełnie innym.
+**Szymon Warda**: Ludzie tej wartości nie widzą tak naprawdę.
 
-Osoba mówiąca 2
-Mi się zdarzało robić w projektach tak, że miałem monolit, ale kawałki rzeczy, które trzeba było skalować gdzieś były wyciąganiu do małego mikro serwisu na serverlessów bacówki. Czyli rozwiązujemy jakieś konkretne problemy, żeby dowieźć tę wartość.
+**Łukasz Kałużny**: Więc to jest w ogóle, wiesz? Dlatego patrząc się całość i taka rzecz z całości. Więc uważam, że tutaj DHH znowu ma haluny, żeby się popisać i porobić dramy. I właśnie bardzo fajnie jest powiedziane od tego, CTO Amazona, z czym się zgadzam. Po prostu to nie jest religia. Nie ma jedynej słusznej rzeczy, która... Słusznych wzorców architektonicznych, które zawsze, wszędzie będą działały. I problem z mikroserwisami i też pojmowaniem tam tego... Jak patrzę, tych komentarzy... Jest taki, że wszyscy zapominają, że architektura ewoluuje. Nawet mamy już teraz pojęcie architektury ewolucyjnej. A druga rzecz, że wszystkie techniki modelingowe powinniśmy zacząć od modelowania co chcemy zrobić. Bo czasami z modelowania jak nic wyjdzie nam monolit, a czasami z powodu sieczki organizacyjnej wyjdą nam mikroserwisy, które rozwiązują nie problemy technologiczne, a organizacyjne.
 
-Osoba mówiąca 1
-Jest fajny. Widziałem też temat gdzie odnośnie tego jak dzielić system pod względem tego np. regulacji rynkowej, które mamy. System generalnie tym zrobimy, który ogarnia kartę, dane personalne i jeszcze jakiś tam pierdołę powiedzmy i wrzucimy tego wszystko do jednego monolitu, bo w tym momencie będziemy. Ten cały monolit będzie w systemie regulacyjnym de facto bardzo sztywnym. Wydzielamy części, które są zagrożone, są objęte regulacjami, a część, które nie są, trzymam osobno chociażby, bo tego nie ma sensu żadnej urealnia.
+**Szymon Warda**: Teraz co więcej, jeszcze jednej rzeczy nie dodałeś. To nam się może zmienić w trakcie życia de facto organizacji systemu, potrzeb, kierunku, w którym to optymalizujemy. Na starcie mógł wyjść monolit, że ma sens, ale potem możemy stwierdzić generalnie, że jednak rozbijamy to i to, co jest też super ważne. Nie powinniśmy chodzić w kierunku takich skrajności, a full monolit, a full mikroserwisy.
 
-Osoba mówiąca 2
-Mamy np. spaprane mikroserwisach user serwis, w którym są dane osobowe i tylko tam są przetwarzane, a jeżeli gdzieś się pojawiają to tylko w postaci jajników i w module sportowym.
+**Łukasz Kałużny**: Nie.
 
-Osoba mówiąca 1
-Modeli i tego jak dzielić system na serwisy jest bardzo dużo. Mówienie, że teraz nagle wracamy do monolitu nie ma żadnego sensu i jest takim tylko biciem piany, głupim. Sorry, ale potem się poznaje doświadczonych architektów, inżynierów, że po prostu patrzę na to tak z politowaniem. Dobra, ok.
+**Szymon Warda**: To są wartości, które... Z których budujemy system. Część systemu może być monolityczna, część może być na mikroserwisach, część może być, część może być czymś zupełnie innym.
 
-Osoba mówiąca 2
-Przejdzie to też nie mówiąc. Monolit dobry, dobrze zrobiony monolit zapoczątkowany też super sprawą. Jak najbardziej właśnie te szanse popatrzeć, bo każda z tych ma swoje wrzody na tyłku. Każda z tych architektur potrafi przyprawić o wrzody żołądka przy dłuższym używaniu.
+**Łukasz Kałużny**: Słuchaj, mi się zdarzało robić w projektach tak, że miałem sobie monolit, ale kawałki rzeczy, które trzeba było skalować gdzieś były wyciągane do małego mikroserwisu na serverlessa, batchówki. Czyli rozwiązujemy jakieś konkretne problemy, żeby dowieźć tą wartość.
 
-Osoba mówiąca 1
-To też zależy od profilu. Trzyma się ludzi po prostu ile się ich mają w organizacji. Wymiarów doboru pod względem agregacji jest dużo, bo to nie to. To nie są tylko rzeczy techniczne, te rzeczy organizacyjne strategii rekrutacji, masa tak naprawdę tematów. Dobrze, to ja jeszcze jeden link dorzucę odnośnie Twojego odnośnie szkoleń.
+**Szymon Warda**: Jest fajny wpis, gdzieś widziałem nie pamiętam już teraz gdzie. Odnośnie tego załóżmy, jak dzielić system pod względem tego np. regulacji rynkowej, które mamy. System generalnie to nie zrobimy, który ogarnia kartę, dane personalne i jeszcze jakieśtam pierdoły powiedzmy, nie rzucimy tego wszystko do jednego monolitu, bo w tym momencie będziemy... Ten cały monolit będzie w systemie regulacyjnym de facto bardzo sztywnym. Wydzielamy części, które są zagrożone, inaczej - które są objęte regulacjami, a część, które nie są, trzymamy osobno chociażby, bo inaczej tego nie ma sensu żadnego.
 
-Osoba mówiąca 2
-Dla.
+**Łukasz Kałużny**: I urealniając... Mamy np. ten spaprany mikroserwis user service, w którym są dane osobowe i tylko tam są przetwarzane, a jeżeli gdzieś się pojawiają to tylko w postaci IDków i w module raportowym.
 
-Osoba mówiąca 1
-Autopilot w GKR. O co chodzi? Chodzi o to generalnie, że chmura global zrobiła root autopilota. Co robi autopilot autopilot?
+**Szymon Warda**: Modeli - i tego, jak dzielić system na serwisy jest bardzo dużo. I mówienie, że teraz nagle wracamy do monolitów nie ma żadnego sensu i jest takim tylko biciem piany, głupim. Sorry, ale potem się poznaje doświadczonych architektów, inżynierów, że po prostu patrzę na to tak z politowaniem i no dobra, ok. Przejdzie to!
 
-Osoba mówiąca 2
-To co ważne wrzuciła to jako domyślny tryb działania ich Kubernetes.
+**Łukasz Kałużny**: Też nie mówiąc. Monolit dobry, dobrze zrobiony monolit i zapoczątkowany też jest super sprawą.
 
-Osoba mówiąca 1
-GKR Dokładnie tak. Co jest ważne na bazie workload'ów sam dobiera infrastrukturę i to muszę powiedzieć o tak naprawdę. Ale co jest ważne to jest taki killer element tego całego kuszenia. Płacimy tylko za realnie zadeklarowane w spadkach podaż użycia, czyli nie płacimy za ten element który jest nieużywany jeżeli chodzi o nasze node. I to jest ciekawe i moje przemyślenie teraz takie wydaje mi się, że to jest ten sam kierunek de facto w którym idziemy będzie w ogóle szło cały nasz przemysł. Powiedzmy sobie kiedyś, lata temu generalnie Microsoft włączył domyślnie coś co się nazywa auto optymalizator kwerend i też było wielkie oburzenie, jak to będziemy automatem nazwali kwerendy na poziomie bazy SQL owych. O Boże, Boże, co to będzie i obecnie dla większości systemów to po prostu ma sens. Będziemy po prostu mogli dzięki temu wybierać węższe systemy, gdzie będzie to realizowali. I teraz nawiązując do szkoleń, to powiem tak też się zgodzimy z tym, że idea DevOps upadła i się spaliła i straciliśmy generację.
+**Szymon Warda**: Jak najbardziej.
 
-Osoba mówiąca 2
-Czegoś co DevOps. Są firmy, które ten model działa, a w innych silosy zostały po staremu z nowymi naklejkami.
+**Łukasz Kałużny**: Właśnie tu też trzeba sobie popatrzeć, bo każda z tych ma swoje wrzody na tyłku. Każda z tych architektur potrafi przyprawić o wrzody żołądka przy dłuższym używaniu.
 
-Osoba mówiąca 1
-Czyli może być inaczej. Idea tego, że będziemy mieli developera, który będzie robił kod backend w kod Kubernetes w SQL a zaraz w MON go jeszcze trochę napiszę.
+**Szymon Warda**: Znaczy to też zależy od profilu, jakich ma się ludzi po prostu i ile się ich ma w organizacji. Wymiarów doboru architektury pod względem strategii organizacji jest dużo, bo to nie są... To nie są tylko rzeczy techniczne, to są też rzeczy organizacyjne. Strategii rekrutacji, masę tak naprawdę tematów. Dobrze, to ja jeszcze jeden link dorzucę odnośnie Twojego... Odnośnie Patoszkoleń.
 
-Osoba mówiąca 2
-Upadł. Akurat to.
+**Łukasz Kałużny**: No...
 
-Osoba mówiąca 1
-Upadło nawet.
+**Szymon Warda**: Autopilot w GKE. O co chodzi? Chodzi o to generalnie, że chmura google'owa zrobiła rollout autopilota. Co robi autopilot? Autopilot...
 
-Osoba mówiąca 2
-Nawet powiedzmy sobie zespoły bez ludzi im nie będą komplementarne.
+**Łukasz Kałużny**: Raczej powiedzmy, ważne, wrzuciła to jako domyślny tryb działania ich Kubernetesów w GKE.
 
-Osoba mówiąca 1
-Taka taka idea, że człowiek będzie robił wszystko. To w ogóle padło. I teraz czy warto uczyć się? Jest bardzo potrzebne zrozumienie go, bo nie każdy będzie musiał pisać te kable, ale wydaje mi się, że developerzy będą musieli zrozumieć co tam się dzieje, bo ci, którzy będą podchodzili do tego jak do magii tej sytuacji to mimo, że miałem negować to powiem, że tak dobry pomysł.
+**Szymon Warda**: Dokładnie tak. Co jest ważne, na bazie workload'ów sam dobiera infrastrukturę i to można sobie powiedzieć - o, fajnie, fajnie tak naprawdę. Ale co jest ważne? To jest taki ten killer element tego całego ogłoszenia. Płacimy tylko za realnie zadeklarowane w specach poda użycia, czyli nie płacimy za ten element który jest nieużywany jeżeli chodzi o nasze node'y. I to jest ciekawe... I moje przemyślenie jest teraz takie, wydaje mi się, że to jest ten sam kierunek de facto w którym idziemy - będzie w ogóle szło... Cały nasz przemysł. Powiedzmy sobie. Kiedyś, lata temu generalnie Microsoft włączył domyślnie coś, co się nazywa auto-optymalizator kwerend i też było wielkie oburzenie, jak to? Będziemy autooptymalizowali kwerendy na poziomie baz SQL-owych. O Boże, Boże, co to będzie? I obecnie dla większości systemów to po prostu ma sens. Będziemy po prostu mogli dzięki temu wybierać węższe systemy, gdzie będziemy to optymalizowali. I teraz nawiązując do szkoleń, to powiem tak... Tutaj się zgodzimy z tym, że idea DevOpsa upadła i się spaliła i straciliśmy generalnie...
 
-Osoba mówiąca 2
-Ogólnie tak mail poszedł, za dwa tygodnie będę gadał akurat sesję na temat właśnie porażek Kubernetes owych fake stories. To będzie właśnie ten przypadek, kiedy ktoś potraktował to jako między innymi magiczne pudełko.
+**Łukasz Kałużny**: Wiesz co, DevOpsa... Są firmy, które... Ten model działa, a w innych silosy zostały po staremu z nowymi naklejkami.
 
-Osoba mówiąca 1
-Przybywania, że cokolwiek jest magią, nigdy nie zadziała i za chwilę się wywali albo będzie złe użycie. Taka prawda. Dobrze, to kończymy.
+**Szymon Warda**: Czyli - może powiem inaczej. Idea tego, że będziemy mieli developera, który będzie robił kod backendowy, kod Kubernetesowy, SQLa, w Elasticu, w Mongo jeszcze frontend napisze...
 
-Osoba mówiąca 2
-Zawijamy, zawijamy się na razie.
+**Łukasz Kałużny**: Upadł.
+
+**Szymon Warda**: Upadł. To upadło generalnie.
+
+**Łukasz Kałużny**: Nawet, powiedzmy sobie zespoły bez ludzi od infry nie będą komplementarne.
+
+**Szymon Warda**: Taka, taka idea, że człowiek będzie robił wszystko. To w ogóle upadło. I teraz czy warto uczyć się Kubernetesa? Jest bardzo potrzebne zrozumienie go, bo nie każdy będzie musiał pisać te YAMLe, ale wydaje mi się, że developerzy będą musieli zrozumieć co tam się dzieje, bo ci, którzy będą podchodzili do tego jak do magii - sorry, ale szybko upadną w tej sytuacji - więc to mimo, że miałem negować to powiem, że tak. Dobry pomysł ogólnie.
+
+**Łukasz Kałużny**: Tak - no i poszerzę, za dwa tygodnie będę gadał akurat sesję na temat właśnie porażek Kubernetesowych Fuckup Stories. To będzie właśnie ten przypadek, kiedy ktoś potraktował to jako między innymi magiczne pudełko.
+
+**Szymon Warda**: Przewidywanie, że cokolwiek jest magią, nigdy nie zadziała i za chwilę się wywali albo będzie złe użycie. Tak naprawdę. Dobrze, to kończymy.
+
+**Łukasz Kałużny**: Zawijamy, zawijamy.
+
+**Szymon Warda**: Trzymajcie się.
+
+**Łukasz Kałużny**: Na razie, hej.
 
