--- a/_posts/2023-05-12-74.md
+++ b/_posts/2023-05-12-74.md
@@ -6,7 +6,7 @@ description:
 episode: "74"
 tags: []
 spreaker: 53819375
-apple: 
+apple: patoarchitekci-short-27/id1477067604?i=1000612738192
 newsletter:  |
   
 
@@ -14,9 +14,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/74/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/6fON2Wrhh3y4nuIKR6agdj)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-27/id1477067604?i=1000612738192)
 
   ➡️ [YouTube]()
 ---
